--- a/email_config.json
+++ b/email_config.json
@@ -2,7 +2,8 @@
     "smtp_server": "smtp.gmail.com", 
     "smtp_port": 587,
     "sender_email": "nesta09422@gmail.com",
-    "receiver_email": "ldi16@daum.net",
+    "receiver_email": "nesta09422@gmail.com",
     "email_subject": "[GitHub Actions] 자동 이메일 테스트"
     "password": "aphw fuho lfff unyv"
+
 }
