--- a/.github/workflows/auto_email.yml
+++ b/.github/workflows/auto_email.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   send_report:
     runs-on: ubuntu-latest
+    
+    # ⭐⭐ 권한 설정 추가: 이 설정이 있어야 로그 파일 커밋이 성공합니다. ⭐⭐
+    permissions:
+      contents: write
+    # ⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐
+
     steps:
       # 1. 레포지토리 체크아웃
       - name: Checkout repository
@@ -19,11 +25,9 @@ jobs:
         with:
           python-version: '3.x'
 
-      # 3. Python 스크립트 실행 (APP_SECRET 사용)
+      # 3. Python 스크립트 실행
       - name: Run Python script and Send Email
         env:
-          # ✅ 수정된 부분: GitHub Secret 'APP_SECRET'의 값을 
-          # Python 스크립트가 사용하는 환경 변수 'EMAIL_PASSWORD'에 할당합니다.
           EMAIL_PASSWORD: ${{ secrets.APP_SECRET }}
         run: python send_automatic_email.py
         
